--- a/src/main/resources/ch/makery/address/view/PersonOverview.fxml
+++ b/src/main/resources/ch/makery/address/view/PersonOverview.fxml
@@ -64,7 +64,7 @@
                      <buttons>
                         <Button mnemonicParsing="false" text="New..." />
                         <Button mnemonicParsing="false" text="Edit..." />
-                        <Button mnemonicParsing="false" text="Delete" />
+                        <Button mnemonicParsing="false" onAction="#handleDeletePerson" text="Delete" />
                      </buttons>
                   </ButtonBar>
                   <TextField fx:id="mytext" layoutX="6.0" layoutY="213.0" />
