--- a/src/main/resources/ch/makery/address/view/PersonEditDialog.fxml
+++ b/src/main/resources/ch/makery/address/view/PersonEditDialog.fxml
@@ -9,13 +9,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.makery.address.view.PersonEditDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" styleClass="background" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.makery.address.view.PersonEditDialogController">
    <children>
       <GridPane layoutX="94.0" layoutY="67.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.20001220703125" minWidth="10.0" prefWidth="116.59995574951171" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="232.6000076293945" minWidth="10.0" prefWidth="222.20004425048825" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.20001220703125" minWidth="10.0" prefWidth="84.40003662109375" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="232.6000076293945" minWidth="10.0" prefWidth="154.79996337890623" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -27,7 +26,7 @@
         </rowConstraints>
          <children>
             <Label text="First Name" />
-            <Label text="Last Name" GridPane.rowIndex="1" />
+            <Label prefWidth="75.0" text="Last Name" GridPane.rowIndex="1" />
             <Label text="Street" GridPane.rowIndex="2" />
             <Label text="City" GridPane.rowIndex="3" />
             <Label text="Postal Code" GridPane.rowIndex="4" />
